# ai-psy-benchmark

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  config.yaml  empathyc_keys.yaml  main.py  pyproject.toml
charts/: generate_charts.py
charts/output/: FIGURE_CAPTIONS.md  README.md
messages/experiment-setup/: messages.yaml
prompts/: experiment-setup.yaml  llm-judge-rubrics.md  rubric-science.md
results/: README.md  empathyc_analytics_full.csv
scenarios/: README.md  _config.yaml  companion.yaml  mental-health.yaml
scripts/: batch_runner.py  descriptive_stats.py  empathyc_client.py  formal_stats.py  openai_client.py  phase_sensitivity.py  turn_trends.py
